# ukui-notebook

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  ukui-notebook.pro
cmake/: common.cmake
data/: org.ukui.note.conf  org.ukui.note.service  org.ukui.note.xml  ukui-notebook.desktop  ukui-notebook.desktop.in
data/ukui-notebook/en_US/: index.md
data/ukui-notebook/zh_CN/: index.md
debian/: changelog  control  copyright  ukui-notebook.manpages  watch
debian/source/: local-options
debian/upstream/: metadata
man/: ukui-notebook-server.1  ukui-notebook.1
po/: POTFILES.in
sh/: common.sh  update_translations.sh
src/: CMakeLists.txt  about.cpp  about.h  editPage.cpp  editPage.h  editPage.ui  emptyNotes.cpp  emptyNotes.h  emptyNotes.ui  fontButton.cpp  fontButton.ui  font_color_push_button.cpp  font_color_push_button.h  headerbar.cpp  iconViewModeDelegate.cpp  iconViewModeDelegate.h  image.qrc  listViewModeDelegate.cpp  listViewModeDelegate.h  main.cpp  noteData.h  noteHead.cpp  noteHead.h  noteHeadMenu.cpp  noteHeadMenu.h  noteView.cpp  noteView.h  paletteWidget.cpp  paletteWidget.h  paletteWidget.ui  setFontColorPage.cpp  setFontColorPage.h  setFontColorPage.ui  setFontSizePage.cpp  setFontSizePage.ui  src.pro  src.qrc  widget.cpp  widget.h
src/CloseButton/: closebutton.cpp  closebutton.h
src/common/: CMakeLists.txt  information_collector.cpp  windowmanage.hpp
src/utils/: information_collector.cpp  utils.cpp  xatom-helper.cpp  xatom-helper.h
translations/: generate_translations_qm.sh  generate_translations_ts.sh
translations/ukui-notebook/: ukui-notebook_bo_CN.qm  ukui-notebook_bo_CN.ts  ukui-notebook_en.ts  ukui-notebook_fr.qm  ukui-notebook_kk.qm  ukui-notebook_kk.ts  ukui-notebook_ky.qm  ukui-notebook_ky.ts  ukui-notebook_ru.ts  ukui-notebook_tr.qm  ukui-notebook_ug.qm  ukui-notebook_ug.ts  ukui-notebook_zh_CN.qm  ukui-notebook_zh_CN.ts
uNoteDbusServer/: CMakeLists.txt  main.cpp  uNoteDbusServer.cpp  uNoteDbusServer.h  uNoteDbusServer.pro
